Camlp5 Version 5.03:
--------------------

* [29 Oct 07] Added [Pcaml.inter_phrases], a way to set, by program,
  the value of the "-sep" option of the printers kits.
* [28 Oct 07] Fixed bug in pa_fstream.cmo (functional parsers): the
  keyword after "match with" was "parser" instead of "fparser" and
  its code was wrong.
* [27 Oct 07] Added a default lexing buffer (in module [Plexing]) for
  pa_lexer.cmo: then, the programmer does not need to write it any
  more.

Camlp5 Version 5.02:
--------------------

* [14 Oct 07] Changed 'pa_lex.cmo' into 'pa_lexer.cmo' with a different
  syntax (see the documentation).
* [14 Oct 07] In the EXTEND statement, added "LIKE s" as possible
  level position to specify a level containing a rule containing "s"
  in its keywords or tokens.
* [11 Oct 07] Rewritten parsers and printers in Scheme syntax. Deleted
  old module Spretty.

Camlp5 Version 5.01:
--------------------

* [06 Oct 07] Fixed bug in grammars: there was a parsing confusion with
  entries with qualified names with same final identifier, resulting
  bad results. Example: (qualified names "Prim.ident" and "Constr.ident"
  have the same final identifier "ident").
    EXTEND
      Prim.ident: [ [ ... ] ];
      Constr.ident: [ [ ... ] ];
    END;
* [05 Oct 07] In Scheme syntax (pa_scheme.cmo), added "type*" (symmetric
  to "define*") and "exceptionrebind".
* [04 Oct 07] Added flag C in pr_r.cmo and pr_o.cmo to add comments inside
  phrases (default = True).
* [01 Oct 07] Added flag E in pr_r.cmo and pr_o.cmo to ask to equilibrate
  cases in 'match', 'if', 'parse', 'EXTEND' statements, i.e if one case does
  not fit on the line, all cases must be cut (default = False).
* [01 Oct 07] Added module "Diff" in the library (general comparison of
  two arrays). Implemented with the same algorithm as the Unix 'diff'
  command.
* [01 Oct 07] Fixed bug in pa_o.cmo (normal syntax) introduced in version
  5.00. The example: "function Atom atext as cur :: tl' -> 0" did not