@@ -6,8 +6,7 @@ Camlp5 Version 5.03:
 
 * [29 Oct 07] Replaced the exception [Grammar.SkipItem] (designed
   to make IFDEF in constructor declarations and pattern matching
-  cases work) by the function [Grammar.skip_item]. This was necessary
-  because it did not work with functional parsing.
+  cases work) by the function [Grammar.skip_item].
 
 Camlp5 Version 5.01:
 ---------------------
